--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 
     <body>
 
+        <!--Hyperlinks to jump us to different pages-->
+
+        <a href="products.html"> Click here for Products</a> <br>
+
         <!--This is the body section of the page-->
 
         Contents of the websites go here<br>
@@ -94,8 +98,8 @@
         <p>
             <h5>An inline picture</h5>
 
-                <img src="image1.jpg" width="400" height="300" border="5px"/>
-                <img src="landscape.jpg" width="400" height="300" border="5px"/>
+                <img src="image1.jpg" border="5px" alt="Landscape"/>                
+                <img src="landscape.jpg" border="5px" alt="Landscape"/>
 
         </p>
 
