--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
         <!--Hyperlinks to jump us to different pages-->
 
-        <a href="products.html"> Click here for Products</a> <br>
+        <a href="products.html">Products</a>
+        <a href="tables.html">Tables</a><br>
+
 
         <!--This is the body section of the page-->
 
