--- a/products.html
+++ b/products.html
@@ -8,7 +8,8 @@
 
         <!--Create links here-->
 
-        <a href="index.html">Back to Home Page</a> <br>
+        <a href="index.html">Home</a>
+        <a href="tables.html">Tables</a><br>
 
         <h1>Welcome to the Products Page</h1>
 
