Modified our hyperlinks with div and class in css

--- a/products.html
+++ b/products.html
@@ -7,9 +7,13 @@
     <body>
 
         <!--Create links here-->
+        <div class="TopNav">
 
         <a href="index.html">Home</a>
+        <a href="#">Products</a>
         <a href="tables.html">Tables</a><br>
+
+        </div>
 
         <h1>Welcome to the Products Page</h1>
 
