--- a/tables.html
+++ b/tables.html
@@ -7,8 +7,13 @@
     <body>
 
         <!--Hyperlink goes here-->
+        <div class="TopNav">
+
         <a href="index.html">Home</a>
-        <a href="products.html">Products</a><br>
+        <a href="products.html">Products</a>
+        <a href="#">Tables</a><br>
+
+        </div>
 
 
         <h1>Our Tables will be created here.....</h1>
