--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
     <body>
 
         <!--Hyperlinks to jump us to different pages-->
+        <div class="TopNav">
 
+        <a href="#">Home</a>
         <a href="products.html">Products</a>
         <a href="tables.html">Tables</a><br>
 
+        </div>
 
         <!--This is the body section of the page-->
 
