Added forms to forms.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
         <a href="#">Home</a>
         <a href="products.html">Products</a>
-        <a href="tables.html">Tables</a><br>
+        <a href="tables.html">Tables</a>
+        <a href="forms.html">Forms</a><br>
 
         </div>
 
