--- a/tables.html
+++ b/tables.html
@@ -11,7 +11,8 @@
 
         <a href="index.html">Home</a>
         <a href="products.html">Products</a>
-        <a href="#">Tables</a><br>
+        <a href="#">Tables</a>
+        <a href="forms.html">Forms</a><br>
 
         </div>
 
