--- a/products.html
+++ b/products.html
@@ -11,7 +11,8 @@
 
         <a href="index.html">Home</a>
         <a href="#">Products</a>
-        <a href="tables.html">Tables</a><br>
+        <a href="tables.html">Tables</a>
+        <a href="forms.html">Forms</a><br>
 
         </div>
 
