Included title icons to all the pages

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <!--Below are to be used for adding a css style-->
         <link rel="stylesheet" type="text/css" href="style.css"/>
 
+        <link rel="icon" href="shipped_icon.png" type="image/icon type"/>
+
     </head>
 
     <body>
