--- a/products.html
+++ b/products.html
@@ -3,6 +3,9 @@
         <title>Products Page</title>
 
         <link rel="stylesheet" type="text/css" href="style.css"/>
+
+        <link rel="icon" href="handle_icon.png" type="image/icon type"/>
+
     </head>
     <body>
 
