--- a/tables.html
+++ b/tables.html
@@ -3,6 +3,9 @@
         <title>Tables</title>
 
         <link rel="stylesheet" type= "text/css" href="style.css">
+
+        <link rel="icon" href="headset_icon.png" type="image/icon type"/>
+
     </head>
     <body>
 
