--- a/forms.html
+++ b/forms.html
@@ -8,6 +8,8 @@
 
     <link rel="stylesheet" type="text/css" href="style.css"/>
 
+    <link rel="icon" href="commercial_icon.png" type="image/icon type"/>
+
 </head>
 
 <body>
