--- a/forms.html
+++ b/forms.html
@@ -6,21 +6,47 @@
 
     <title> Forms </title>
 
+    <!--Make the website responsive or respond to different screen sizes-->
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
+    <meta name="HandheldFriendly" content="true">
+
+    <!--Below are to be used for adding a css style-->
+
     <link rel="stylesheet" type="text/css" href="style.css"/>
 
     <link rel="icon" href="commercial_icon.png" type="image/icon type"/>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+
+    <script>
+        /* Toggle between adding and removing the "responsive" class to TopNav when the user clicks on the icon */
+        function myFunction() {
+            var x = document.getElementById("myTopNav");
+            if (x.className === "TopNav") {
+                x.className += "responsive";
+            } else {
+                x.className = "TopNav";
+            }
+            }
+    </script>
 
 </head>
 
 <body>
 
     <!--Hyperlinks to jump us to different pages-->
-    <div class="TopNav">
+    <div class="TopNav" id="myTopNav">
 
         <a href="index.html">Home</a>
         <a href="products.html">Products</a>s
         <a href="tables.html">Tables</a>
-        <a href="#">Forms</a><br>
+        <a href="#">Forms</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+          </a>
 
         </div>
     
