pages responsive to different screen sizes

--- a/products.html
+++ b/products.html
@@ -17,6 +17,8 @@
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
         <script>
             /* Toggle between adding and removing the "responsive" class to TopNav when the user clicks on the icon */
             function myFunction() {
@@ -34,15 +36,13 @@
 
         <!--Create links here-->
         <div class="TopNav" id="myTopNav">
-
-        <a href="index.html">Home</a>
-        <a href="#">Products</a>
-        <a href="tables.html">Tables</a>
-        <a href="forms.html">Forms</a>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-            <i class="fa fa-bars"></i>
-          </a>
-
+            <a href="index.html">Home</a>
+            <a href="#">Products</a>
+            <a href="tables.html">Tables</a>
+            <a href="forms.html">Forms</a>
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                <i class="fa fa-bars"></i>
+            </a>
         </div>
 
         <h1>Welcome to the Products Page</h1>
