added sizes for different screens

--- a/forms.html
+++ b/forms.html
@@ -22,7 +22,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 
     <script>
-        /* Toggle between adding and removing the "responsive" class to TopNav when the user clicks on the icon */
+        /* Toggle between adding and removing the "responsive" class to TopNav when the user clicks on the icon
+        Beware of the Space before responsive in line 26 -_- it is intentional */
         function myFunction() {
             var x = document.getElementById("myTopNav");
             if (x.className === "TopNav") {
